--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
   <footer id="foot">
     <h2 id="userLogin"></h2>
     <h5>Images provided by <a href="https://www.pexels.com/">Pexels</a></h5>
+    <h5>Text content provided by ChatGpt3.5</h5>
   </footer>
   </div>
