--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,1 +1,15 @@
-<p>gallery works!</p>
+<section>
+    <picture>
+        <source srcset="./assets/images/image1.webp" type="image/webp">
+        <img src="./assets/images/image1.jpg" alt="Picture of Otter, picture provided by Pexels, photo from Pixabay" type="image/jpg">
+    </picture>
+    <picture>
+        <source srcset="./assets/images/image2.webp" type="image/webp">
+        <img src="./assets/images/image2.jpg" alt="Picture of a mink by a rock formation, picture provided by pexels, photographer: Juan Marcos Alvarez" type="image/jpg">
+    </picture>
+    <picture>
+        <source srcset="./assets/images/image3.webp" type="image/webp">
+        <img src="./assets/images/image3.jpg" alt="Picture of a vole by a riverside, picture provided by pexels, photographer: DSD" type="image/jpg">
+    </picture>
+</section>
+
