--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -2,9 +2,8 @@
     <section>
         <article>
             <picture>
-                <source srcset="./assets/images/image1.jpg?as=avif&width=400" type="image/avif">
-                <source srcset="./assets/images/image1.jpg?as=webp&width=400" type="image/webp">
-                <img src="./assets/images/image1.jpg?width=400" alt="Picture of Otter, picture provided by Pexels, photo from Pixabay" type="image/jpg">
+                <source srcset="./assets/images/image1.webp" type="image/webp">
+                <img src="./assets/images/image1.jpg" alt="Picture of Otter, picture provided by Pexels, photo from Pixabay" type="image/jpg">
             </picture>
             <div class="bigdiv">
                 <div>
@@ -30,9 +29,8 @@
         </article>
         <article>
             <picture>
-                <source srcset="./assets/images/image2.jpg?as=avif&width=400" type="image/avif">
-                <source srcset="./assets/images/image2.jpg?as=webp&width=400" type="image/webp">
-                <img src="./assets/images/image2.jpg?width=400" alt="Picture of a mink by a rock formation, picture provided by pexels, photographer: Juan Marcos Alvarez" type="image/jpg">
+                <source srcset="./assets/images/image2.webp" type="image/webp">
+                <img src="./assets/images/image2.jpg" alt="Picture of a mink by a rock formation, picture provided by pexels, photographer: Juan Marcos Alvarez" type="image/jpg">
             </picture>
             <div class="bigdiv">
                 <div>
@@ -54,9 +52,8 @@
         </article>
         <article>
             <picture>
-                <source srcset="./assets/images/image3.jpg?as=avif&width=400" type="image/avif">
-                <source srcset="./assets/images/image3.jpg?as=webp&width=400" type="image/webp">
-                <img src="./assets/images/image3.jpg?width=400" alt="Picture of a vole by a riverside, picture provided by pexels, photographer: DSD" type="image/jpg">
+                <source srcset="./assets/images/image3.webp" type="image/webp">
+                <img src="./assets/images/image3.jpg" alt="Picture of a vole by a riverside, picture provided by pexels, photographer: DSD" type="image/jpg">
             </picture>
             <div class="bigdiv">
                 <div>
