fixed conversion page and some style

--- a/src/app/convert/convert.component.html
+++ b/src/app/convert/convert.component.html
@@ -1,1 +1,4 @@
-<p>convert works!</p>
+<section>
+    <app-lenght-convert></app-lenght-convert>
+    <app-temprature-convert></app-temprature-convert>
+</section>
