--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,7 @@ body {
     display: flex;
     flex-direction: column;
     section {
+        padding-top: 8em;
         display: grid;
         margin: auto;
         width: clamp(200px, 100%, 2000px);
@@ -117,16 +118,19 @@ body {
         bottom: 0;
         width: 100%;
         height: 10em;  
-        h2 {
-            color: var(--textColor1);
-            margin-left: 1em;
-        }
+        display: flex;
+        flex-direction: column;
         h5 {
+            margin: 0.2em;
+            margin-right: 0.4em;
             color: var(--textColor);
-            font-size: 2em;
-            margin-top: 1em;
+            font-size: 1.5em;
             text-align: end;
-            margin: 1em;
+            @media screen and (max-width: 1500px) {
+                font-size: 1.3em;
+                text-align: start;
+                margin-left: 1em;
+            }
         }
         a, h5{
             color: var(--textColor1);
