added about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,14 +1,16 @@
 <section>
-    <picture>
-        <source srcset="./assets/images/image1.webp" type="image/webp">
-        <img src="./assets/images/image1.jpg" alt="Picture of Otter, picture provided by Pexels, photo from Pixabay" type="image/jpg">
-    </picture>
-    <picture>
-        <source srcset="./assets/images/image2.webp" type="image/webp">
-        <img src="./assets/images/image2.jpg" alt="Picture of a mink by a rock formation, picture provided by pexels, photographer: Juan Marcos Alvarez" type="image/jpg">
-    </picture>
-    <picture>
-        <source srcset="./assets/images/image3.webp" type="image/webp">
-        <img src="./assets/images/image3.jpg" alt="Picture of a vole by a riverside, picture provided by pexels, photographer: DSD" type="image/jpg">
-    </picture>
+    <article>
+        <h2>Utvärdering Uppgift 3</h2>
+        <div>
+            <p>Denna uppgift har gått relativt bra, vet inte vad jag tycker om angular strukturen. Teoretiskt tycker jag det låter användbart men får en attack när jag försöker navigera igenom filerna... Preferens fråga helt enkelt. Gillar man att importera
+                saker höger och vänster så är angular bra för det i alla fall.
+            </p>
+            <p>Processen var ganska rak, skapade css och html för en startsida och migrerade denna sedan till ett angular projekt, kunde nog bara skapat det direkt i angular. Varefter jag delade upp headern till en egen komponent för modularitetens skull. Kunde nog ha gjort det samma med footern men gjorde inte det.</p>
+            <p>Använde mig av pexels för lite exempel bilder och kände en värk i hjärtat när parcels image functionaliteter inte längre var tillgängliga, till konverterarn jag fick gå tillslut. Enda garantierna i livet är döden och köra alla bilder igenom en online verktyg</p>
+            <p>Byggde css koden lite skumt dock... kunde nog ha modulerat den mer för i närvarande så är den "globala" ganska komprehensiv... Men det får vara! Körde ochså fast i att jag använde scss variabler för en hel del grejer, och dessa fungerade inte "globalt", varafter jag fick återgå till css variabler då de stannar i root.</p>
+            <p>Routern tog lite tid att få alla importer rätt och få den nuvarande sidan understruken i navigationen (kan inte glömma bort all tillgänglighet :) ) Convertern gick snabbare däremot!, kollade på genomgången och "apade" efter lite grann för att få live läsning att fungera. Varefter det bara var att köra in formlerna för konvertering, ville ha så att det fungerar åt båda hållen.</p>
+            <p>A jo värt att nämna är att jag har använt ChatGPT för att skapa texten, då lorem ipsum till min förståelse inte är uppskattat så gick jag till det näst bästa. Har för mig att detta är ok såvida man tydligt säger det och har en tydlig disclaimer i footern, är detta inte ok informera mig gärna så byter jag ut text inehållet till en wikipedia referens eller något.</p>
+            <p>Slutsatsen jag har dragit av angular är att jag kommer behöva slåss med det ett tag för att bli van med det, och att filstrukturen ger mig en attack. Men på den posetiva sidan så är det väldigt bra för datahantering då variabler kan vara tillgängliga och modifieras direkt i filen. Och liveservern fungerar bra!</p>
+        </div>
+    </article>
 </section>
