--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,7 +9,7 @@
         <select title="Home" onchange="location.href=this.value"> 
             <option value="#">Navigate</option> 
             <option value="/">Home</option> 
-            <option value="about">Gallery</option> 
+            <option value="about">About</option> 
             <option value="convert">Converter</option> 
           </select> 
     </nav>
