--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,10 +1,15 @@
 section {
-    max-width: 60%;
-    max-height: 30%;
-    picture {
-        img {
-            max-width: 100%;
-            object-fit: cover;
+    padding-bottom: 12em;
+    grid-template-columns: 1fr;
+    article {
+        margin: auto;
+        width: fit-content;
+        grid-template-columns: 1fr;
+        h2 {
+            text-align: center;
+        }
+        div {
+            margin: auto;
         }
     }
 }
